bootstrap/infra/acs-operator/overlays/oauth/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: central
    app.kubernetes.io/instance: central
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
  name: central
  namespace: stackrox
spec:
  port:
    targetPort: https
  tls:
    termination: rencrypt
  to:
    kind: Service
    name: central
    weight: 100
  wildcardPolicy: None
